--- a/blog.cabal
+++ b/blog.cabal
@@ -32,7 +32,9 @@ executable blog
                      cheapskate,
                      datetime,
                      bcrypt,
-                     hostname
+                     cookie,
+                     blaze-builder,
+                     hashmap
 
   ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O3
                -fno-warn-orphans -fno-warn-unused-do-bind
