--- a/blog.cabal
+++ b/blog.cabal
@@ -37,7 +37,8 @@ executable blog
                      vector,
                      aeson,
                      split,
-                     random
+                     random,
+                     time-lens
 
   ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O3
                -fno-warn-orphans -fno-warn-unused-do-bind
