--- a/blog.cabal
+++ b/blog.cabal
@@ -1,32 +1,27 @@
 name:                blog
 version:             0.0.1
-synopsis:            A blog for my site, symer.io 
+synopsis:            A custom blog for blog.symer.io
 homepage:            http://blog.symer.io
 license:             MIT
 author:              Nathaniel
 maintainer:          nate@symer.io
-category:            Web
+category:            Web  
 build-type:          Simple
 cabal-version:       >=1.8
 data-dir:            public
 
 executable blog
   main-is:           Blog.hs
-  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -funbox-strict-fields -O3 
+  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -funbox-strict-fields -O
   build-depends:     base,
                      wai,
-                     warp,
                      http-types,
-                     resourcet,
                      scotty,
                      text,
                      bytestring,
                      blaze-html,
-                     blaze-markup,
-                     monad-logger,
                      transformers,
                      wai-middleware-static,
-                     wai-extra,
                      time,
                      postgresql-simple,
                      postgresql-simple-migration,
