Basic pagination & moving assets to single origin

--- a/blog.cabal
+++ b/blog.cabal
@@ -36,6 +36,7 @@ executable blog
                      time-lens,
                      hjsmin,
                      css-text,
-                     bcrypt
+                     bcrypt,
+                     magic
 
   
