Added caching headers for static files
Now the ETag and Cache-Control headers are implemented, allowing
for faster non-initial page loads.

Also replaced list splitting library with a generic function.

--- a/blog.cabal
+++ b/blog.cabal
@@ -31,12 +31,12 @@ executable blog
                      blaze-builder,
                      vector,
                      aeson,
-                     split,
                      random,
                      time-lens,
                      hjsmin,
                      css-text,
                      bcrypt,
-                     magic
+                     magic,
+                     pureMD5
 
   
