Better time representation

--- a/blog.cabal
+++ b/blog.cabal
@@ -37,6 +37,7 @@ executable blog
                      css-text,
                      bcrypt,
                      magic,
-                     pureMD5
+                     pureMD5,
+                     old-locale
 
   
