Comment persistence & non-UI frontend work
There is an endpoint (POST /posts/:id/comments) that can be used to
store documents.

There is also some new JS code to render comments client-side. Maybe
comments should be rendered on the frontend only?

--- a/blog.cabal
+++ b/blog.cabal
@@ -13,7 +13,7 @@ data-dir:            assets
 executable blog
   main-is:           Blog.hs
   hs-source-dirs:    src
-  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -funbox-strict-fields -O
+  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -O
   build-depends:     base,
                      wai,
                      http-types,
