--- a/blog.cabal
+++ b/blog.cabal
@@ -46,4 +46,5 @@ executable blog
                      stm,
                      directory,
                      mtl,
-                     cereal
+                     cereal,
+                     hsyslog
