--- a/blog.cabal
+++ b/blog.cabal
@@ -16,6 +16,7 @@ executable blog
   ghc-options:       -threaded -Wall -fwarn-tabs -O2
   build-depends:     base,
                      http-types,
+                     wai-extra,
                      scotty,
                      text,
                      bytestring,
