--- a/blog.cabal
+++ b/blog.cabal
@@ -16,6 +16,9 @@ executable blog
   ghc-options:       -threaded -Wall -fwarn-tabs -O2
   build-depends:     base,
                      http-types,
+                     warp,
+                     warp-tls,
+                     wai,
                      scotty,
                      text,
                      bytestring,
