--- a/blog.cabal
+++ b/blog.cabal
@@ -19,6 +19,7 @@ executable blog
                      warp,
                      warp-tls,
                      wai,
+                     process,
                      scotty,
                      text,
                      bytestring,
