Sexy `User` row parser & Improved killing of HTTP redirection process

--- a/blog.cabal
+++ b/blog.cabal
@@ -40,6 +40,7 @@ executable blog
                      bcrypt,
                      pureMD5,
                      parsec,
+                     attoparsec,
                      data-default,
                      unordered-containers,
                      scotty-tls,
