--- a/blog.cabal
+++ b/blog.cabal
@@ -15,6 +15,7 @@ executable blog
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -fwarn-tabs -O2
   build-depends:     base,
+                     tostring,
                      http-types,
                      warp,
                      warp-tls,
