Fixed code background + post truncation when multiple posts are rendered.

--- a/blog.cabal
+++ b/blog.cabal
@@ -25,6 +25,7 @@ executable blog
                      text,
                      bytestring,
                      blaze-html,
+                     blaze-html-truncate,
                      transformers,
                      time,
                      postgresql-simple,
