FileCache can handle non-file conditions more gracefully using timeouts

--- a/blog.cabal
+++ b/blog.cabal
@@ -54,4 +54,6 @@ executable blog
                      mtl,
                      tls,
                      fsnotify,
-                     hashtables
+                     hashtables,
+                     directory,
+                     filepath
