--- a/blog.cabal
+++ b/blog.cabal
@@ -11,11 +11,14 @@ cabal-version:       >=1.8
 data-dir:            assets
 
 executable blog
+  
   main-is:           Main.hs
   hs-source-dirs:    src
   build-tools:       hsc2hs
   other-modules:     Blog.System.Terminal
-  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O2
+  ghc-options:       -threaded -Wall -O2
+  if os(linux)
+    ghc-options:     -threaded -optl-static -optl-pthread -O2
   build-depends:     base,
                      containers,
                      unordered-containers,
