Replace built-in code with webapp package

--- a/blog.cabal
+++ b/blog.cabal
@@ -14,47 +14,25 @@ executable blog
   
   main-is:           Main.hs
   hs-source-dirs:    src
-  build-tools:       hsc2hs
-  other-modules:     Blog.Terminal
   ghc-options:       -threaded -Wall -O2
   build-depends:     base,
+                     transformers,
                      containers,
                      unordered-containers,
-                     http-types,
-                     warp,
-                     warp-tls,
-                     wai,
-                     wai-extra,
-                     process,
-                     scotty,
                      text,
                      bytestring,
-                     blaze-html,
-                     transformers,
+                     base16-bytestring,
                      time,
+                     random,
+                     bcrypt,
+                     aeson,
+                     attoparsec,
+                     http-types,
+                     wai,
+                     scotty,
                      postgresql-simple,
                      postgresql-simple-migration,
                      cheapskate,
                      blaze-builder,
-                     blaze-markup,
-                     vector,
-                     aeson,
-                     random,
-                     hjsmin,
-                     css-text,
-                     bcrypt,
-                     cryptohash,
-                     base16-bytestring,
-                     attoparsec,
-                     data-default,
-                     optparse-applicative,
-                     unix,
-                     stm,
-                     directory,
-                     mtl,
-                     tls,
-                     fsnotify,
-                     hashtables,
-                     directory,
-                     filepath,
-                     zlib
+                     blaze-html,
+                     webapp
