--- a/blog.cabal
+++ b/blog.cabal
@@ -11,7 +11,6 @@ cabal-version:       >=1.8
 data-dir:            assets
 
 executable blog
-  
   main-is:           Main.hs
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -O2
@@ -33,6 +32,7 @@ executable blog
                      resource-pool,
                      postgresql-simple,
                      postgresql-simple-migration,
+                     optparse-applicative,
                      cheapskate,
                      blaze-builder,
                      blaze-html,
