--- a/blog.cabal
+++ b/blog.cabal
@@ -28,7 +28,8 @@ executable blog
                      aeson,
                      attoparsec,
                      http-types,
-                     wai == 3.0.5.0,
+                     wai,
+                     wai-extra,
                      resource-pool,
                      postgresql-simple,
                      postgresql-simple-migration,
@@ -37,6 +38,7 @@ executable blog
                      blaze-builder,
                      blaze-html,
                      blaze-svg,
+                     blaze-markup,
                      webapp >= 0.2.0,
                      niagra >= 0.2.0,
                      
