--- a/blog.cabal
+++ b/blog.cabal
@@ -14,7 +14,7 @@ executable blog
   main-is:           Main.hs
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -O3
-  build-depends:     base,
+  build-depends:     base >=4.8 && <4.9,
                      mtl,
                      transformers,
                      containers,
