--- a/blog.cabal
+++ b/blog.cabal
@@ -7,14 +7,15 @@ author:              Nathaniel
 maintainer:          nate@symer.io
 category:            Web
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.10
 data-dir:            assets
 
 executable blog
   main-is:           Main.hs
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -O3
-  build-depends:     base >=4.8 && <4.9,
+  default-language:  Haskell2010
+  build-depends:     base <4.9,
                      mtl,
                      transformers,
                      containers,
@@ -37,7 +38,7 @@ executable blog
                      blaze-svg,
                      blaze-markup,
                      webapp >= 0.2.0,
-                     niagra >= 0.2.0,
+                     niagra >= 0.2.1,
                      
                      base16-bytestring,
                      mime-types,
