--- a/blog.cabal
+++ b/blog.cabal
@@ -15,7 +15,7 @@ executable blog
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -O3
   default-language:  Haskell2010
-  build-depends:     base <4.9,
+  build-depends:     base,
                      mtl,
                      transformers,
                      containers,
@@ -37,8 +37,8 @@ executable blog
                      blaze-html,
                      blaze-svg,
                      blaze-markup,
-                     webapp >= 0.3.5,
-                     niagra >= 0.2.1,
+                     webapp >= 0.4.0,
+                     niagra >= 0.2.0,
                      
                      base16-bytestring,
                      mime-types,
