--- a/blog.cabal
+++ b/blog.cabal
@@ -15,7 +15,7 @@ executable blog
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -O3
   default-language:  Haskell2010
-  build-depends:     base,
+  build-depends:     base < 5.0,
                      mtl,
                      transformers,
                      containers,
