--- a/blog.cabal
+++ b/blog.cabal
@@ -1,5 +1,5 @@
 name:                blog
-version:             0.2.0
+version:             0.3.0
 synopsis:            The software behind the blog at symer.io
 homepage:            https://symer.io/
 license:             MIT
@@ -15,7 +15,7 @@ executable blog
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -O3
   default-language:  Haskell2010
-  build-depends:     base,
+  build-depends:     base < 5.0,
                      mtl,
                      transformers,
                      containers,
@@ -49,4 +49,5 @@ executable blog
                      filepath,
                      hashtables,
                      zlib,
-                     cryptohash
+                     cryptohash,
+                     vault
