--- a/blog.cabal
+++ b/blog.cabal
@@ -15,6 +15,17 @@ executable blog
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -O3
   default-language:  Haskell2010
+  other-modules:     Blog.App
+                     Blog.AppState
+                     Blog.Assets
+                     Blog.CSS
+                     Blog.FileCache
+                     Blog.Page
+                     Blog.Post
+                     Blog.SVG
+                     Blog.User
+                     Blog.Util.Markdown
+                     Blog.Util.Minification
   build-depends:     base < 5.0,
                      mtl,
                      transformers,
@@ -51,5 +62,4 @@ executable blog
                      cryptohash,
                      vault,
                      unix
-
 
